Changed getContent method from .getFile to InputStream